# handix

./: Cargo.toml  README.md  config.toml
src/: error.rs  lib.rs  main.rs  option.rs
src/routes/: home.rs  mod.rs  my_ip.rs
static/styles/: globals.css
static/templates/: error.html  index.html  my-ip.html
