[package]
name = "handix"
authors = ["Grégoire Ciles <bonjour@gregoireciles.fr>"]
version = "0.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-http = { version = "3.3.1", default-features = false, features = [
    "compress-brotli",
    "compress-gzip",
    "rustls",
] }
actix-web = { version = "4.3.1", default-features = false, features = [
    "macros",
    "compress-brotli",
    "compress-gzip",
    "cookies",
    "rustls",
] }
actix-files = "0.6"
actix-utils = "3.0.1"
handlebars = { version = "4.2.1", features = ["dir_source"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
reqwest = { version = "0.11.16", features = [
    "blocking",
    "rustls-tls",
    "json",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
env_logger = "0.10"
log = "0.4"
toml = "0.7.3"